Initial dotfiles for wsl

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,33 @@
-# Created by https://www.gitignore.io/api/chocolatey,powershell
-# Edit at https://www.gitignore.io/?templates=chocolatey,powershell
+# CUSTOM
+git/gitconfig.local.symlink
 
-### Chocolatey ###
-# Exclude packaged modules
-*.nupkg
+# Created by https://www.gitignore.io/api/git,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=git,visualstudiocode
 
-### PowerShell ###
-# Exclude packaged modules
-*.zip
+### Git ###
+# Created by git for backups. To disable backups in Git:
+# $ git config --global mergetool.keepBackup false
+*.orig
 
-# Exclude .NET assemblies from source
-*.dll
+# Created by git when using merge tools for conflicts
+*.BACKUP.*
+*.BASE.*
+*.LOCAL.*
+*.REMOTE.*
+*_BACKUP_*.txt
+*_BASE_*.txt
+*_LOCAL_*.txt
+*_REMOTE_*.txt
 
-# End of https://www.gitignore.io/api/chocolatey,powershell
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+
+# End of https://www.gitignore.io/api/git,visualstudiocode
